# api/onboarding.go
@@ -10,9 +10,18 @@ const (
 	maxStringFieldSize = 256
 )
 
+// swagger:model ClientRegisterRequest
 type ClientRegisterRequest struct {
-	Name             string `json:"name"`
-	APIKey           string `json:"apikey"`
+	// The name of the agent
+	// example: test-agent
+	Name string `json:"name"`
+
+	// The api key for the partner api
+	// example: eyJrZXkiOiJHM0Fo... (truncated)
+	APIKey string `json:"apikey"`
+
+	// The base64 encoded private key pem of which the public key has been registered in the partner api
+	// example: LS0tLS1CRUdJTiBS... (truncated)
 	Base64PrivateKey string `json:"base64privatekey"`
 }
 
@@ -33,13 +42,14 @@ func (r *ClientRegisterRequest) Validate() error {
 	}
 }
 
-// swagger:model clientRegisterResponse
+// swagger:ignore
 type ClientRegisterResponse struct {
 	BLSPublicKey string `json:"bls_public_key"`
 	ECPublicKey  string `json:"ec_public_key"`
 	RefID        string `json:"ref_id"`
 }
 
+// swagger:ignore
 type ClientRegisterFinishRequest struct {
 	ID           string `json:"id"`
 	AccountCode  string `json:"accountCode"`
@@ -48,20 +58,23 @@ type ClientRegisterFinishRequest struct {
 	IDDocument   string `json:"idDoc"`
 }
 
-// swagger:model clientRegisterFinishResponse
+// swagger:ignore
 type ClientRegisterFinishResponse struct {
 	FeedURL string `json:"feed_url"`
 }
 
+// swagger:ignore
 type CoreClientServiceRegisterFinishRequest struct {
 	ClientID          string `json:"client_id,omitempty"`
 	IDDocSignatureHex string `json:"idDocSignatureHex"`
 }
 
+// swagger:ignore
 type CoreClientServiceRegisterFinishResponse struct {
 	Feed string `json:"feed"`
 }
 
+// swagger:ignore
 type QredoRegisterInitRequest struct {
 	Name         string `json:"name"`
 	BLSPublicKey string `json:"blsPublicKey"`
@@ -76,6 +89,7 @@ func NewQredoRegisterInitRequest(name, blsPublicKey, ecPublicKey string) *QredoR
 	}
 }
 
+// swagger:ignore
 type QredoRegisterInitResponse struct {
 	ID           string `json:"id"`
 	ClientID     string `json:"clientID"`
@@ -85,6 +99,7 @@ type QredoRegisterInitResponse struct {
 	Timestamp    int64  `json:"timestamp"`
 }
 
+// swagger:model ClientFullRegisterResponse
 type ClientFullRegisterResponse struct {
 	AgentID string `json:"agentId"`
 	FeedURL string `json:"feedUrl"`
