# api/signature.go
@@ -1,15 +1,17 @@
 package api
 
+// swagger:ignore
 type SignRequest struct {
 	MessageHashHex string `json:"message_hash_hex" validate:"required"`
 }
 
-// swagger:model signResponse
+// swagger:ignore
 type SignResponse struct {
 	SignatureHex string `json:"signature_hex"`
 	SignerID     string `json:"signer_id"`
 }
 
+// swagger:ignore
 type VerifyRequest struct {
 	MessageHashHex string `json:"message_hash_hex" validate:"required"`
 	SignatureHex   string `json:"signature_hex" validate:"required"`
